--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,17 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    //Jetpack Compose
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta02" //Añadimos para constraintLayouts
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.material:material-icons-core:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.compiler:compiler:$compose_version"
+
+
+
+    //Jetpack Compose Navegacion
     implementation 'androidx.navigation:navigation-compose:2.5.0-alpha01' //añadimos para navegacion entre pantallas
+
 }
